Implémentation de la base données SQLite
Signed-off-by: JF Enond <jfenond@hotmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="btnAnnuler">Annuler</string>
     <string name="msgAnnule">Annulé.</string>
     <string name="msgEnregistre">Enregistré.</string>
+    <string name="title_activity_produit_liste_activite">Liste des produits</string>
 
 </resources>
